--- a/contact.html
+++ b/contact.html
@@ -78,59 +78,54 @@
     <div class="row align-items-start col-spacing-30">
 
       <!-- LEFT: TEXT -->
-      <div class="col-lg-7">
-        <h1 class="mb-3">
-          Begin your <i class="blue-font-color">coaching journey</i>.
-        </h1>
+      <div class="col-lg-7 mb-4 mb-lg-0">
+        <h1 class="mb-3">Begin your <i class="blue-font-color">coaching journey</i>.</h1>
 
         <p class="mb-3">
-          I offer one-to-one, 60-minute transformative coaching sessions online,
-          creating a calm, supportive and collaborative space for you to reflect
-          and explore what matters most.
+          I offer one-to-one, 60-minute transformative coaching sessions online, creating a calm,
+          supportive and collaborative space for you to reflect and explore what matters most.
         </p>
 
         <p class="mb-3">
-          If you’re curious about how coaching could support you, you’re invited
-          to book a free 30-minute Discovery Call. It’s a relaxed conversation
-          where we can get to know each other and see whether the approach feels
-          right for you.
+          If you’re curious about how coaching could support you, you’re invited to book a free
+          30-minute Discovery Call. It’s a relaxed conversation where we can get to know each other
+          and see whether the approach feels right for you.
         </p>
 
-        <p class="mb-4">
-          Together we’ll reconnect with your values, clarify your direction,
-          and help you act with intention.
+        <p class="mb-0">
+          Together we’ll reconnect with your values, clarify your direction, and help you act with intention.
         </p>
       </div>
 
       <!-- RIGHT: IMAGE + CARD -->
       <div class="col-lg-5">
+        <div class="contact-side-stack">
 
-        <!-- Image -->
-        <div class="contact-image-wrap mb-4">
-          <img
-            src="assets/images/coaching-journey.jpg"
-            alt="A quiet moment of reflection — beginning a coaching journey"
-            class="contact-image"
-          >
+          <div class="contact-image-wrap">
+            <img
+              src="assets/images/coaching-journey.jpg"
+              alt="A quiet moment of reflection — beginning a coaching journey"
+              class="contact-image"
+            >
+          </div>
+
+          <div class="content-card">
+            <h2 class="mb-3">Work with me.</h2>
+            <ul class="list-checks mb-0">
+              <li>Free Discovery Call — 30 minutes, relaxed and no obligation.</li>
+              <li>One-to-one coaching — 60-minute sessions online.</li>
+              <li>Availability focused on evenings and weekends.</li>
+              <li>I work with clients worldwide online.</li>
+            </ul>
+          </div>
+
         </div>
-
-        <!-- Card -->
-        <div class="content-card h-100">
-          <h2 class="mb-3">Work with me.</h2>
-
-          <ul class="list-checks mb-0">
-            <li>Free Discovery Call — 30 minutes, relaxed and no obligation.</li>
-            <li>One-to-one coaching — 60-minute sessions online.</li>
-            <li>Availability focused on evenings and weekends.</li>
-            <li>I work with clients worldwide online.</li>
-          </ul>
-        </div>
-
       </div>
 
     </div>
   </div>
 </section>
+
 
 
 
