--- a/contact.html
+++ b/contact.html
@@ -73,86 +73,96 @@
     <div class="navbar-placeholder"></div>
 
     <main class="flex-fill">
-<section class="section-spacer section-hero-intro">
-  <div class="container">
-    <div class="row align-items-start col-spacing-30">
 
-      <!-- LEFT: TEXT -->
-      <div class="col-lg-7 mb-4 mb-lg-0">
-        <h1 class="mb-3">Begin your <i class="blue-font-color">coaching journey</i>.</h1>
+  <!-- TOP: Text (left) + Image + Work with me (right) -->
+  <section class="section-spacer section-hero-intro">
+    <div class="container">
+      <div class="row align-items-start col-spacing-30">
 
-        <p class="mb-3">
-          I offer one-to-one, 60-minute transformative coaching sessions online, creating a calm,
-          supportive and collaborative space for you to reflect and explore what matters most.
-        </p>
+        <!-- LEFT: TEXT -->
+        <div class="col-lg-7 mb-4 mb-lg-0">
+          <h1 class="mb-3">Begin your <i class="blue-font-color">coaching journey</i>.</h1>
 
-        <p class="mb-3">
-          If you’re curious about how coaching could support you, you’re invited to book a free
-          30-minute Discovery Call. It’s a relaxed conversation where we can get to know each other
-          and see whether the approach feels right for you.
-        </p>
+          <p class="mb-3">
+            I offer one-to-one, 60-minute transformative coaching sessions online, creating a calm,
+            supportive and collaborative space for you to reflect and explore what matters most.
+          </p>
 
-        <p class="mb-0">
-          Together we’ll reconnect with your values, clarify your direction, and help you act with intention.
-        </p>
-      </div>
+          <p class="mb-3">
+            If you’re curious about how coaching could support you, you’re invited to book a free
+            30-minute Discovery Call. It’s a relaxed conversation where we can get to know each other
+            and see whether the approach feels right for you.
+          </p>
 
-      <!-- RIGHT: IMAGE + CARD -->
-      <div class="col-lg-5">
-        <div class="contact-side-stack">
-
-          <div class="contact-image-wrap">
-            <img
-              src="assets/images/coaching-journey.jpg"
-              alt="A quiet moment of reflection — beginning a coaching journey"
-              class="contact-image"
-            >
-          </div>
-
-          <div class="content-card">
-            <h2 class="mb-3">Work with me.</h2>
-            <ul class="list-checks mb-0">
-              <li>Free Discovery Call — 30 minutes, relaxed and no obligation.</li>
-              <li>One-to-one coaching — 60-minute sessions online.</li>
-              <li>Availability focused on evenings and weekends.</li>
-              <li>I work with clients worldwide online.</li>
-            </ul>
-          </div>
-
+          <p class="mb-0">
+            Together we’ll reconnect with your values, clarify your direction, and help you act with intention.
+          </p>
         </div>
-      </div>
 
-    </div>
-  </div>
-</section>
+        <!-- RIGHT: IMAGE + CARD -->
+        <div class="col-lg-5">
+          <div class="contact-side-stack">
 
-
-
-
-        <section class="section-spacer">
-            <div class="container">
-                <div class="content-card text-center h-100">
-                  <h2 class="mb-3">Get in touch.</h2>
-                  <p class="mb-3">I’d love to hear from you. Whether you’re curious about coaching, have a question, or want to book an introductory call, please reach out.</p>
-                  <p class="mb-3">Whether you’re based in London or elsewhere in the world, we can work together online at a pace that suits you.</p>
-                  <p class="mb-4">Email: <a href="mailto:alex@noein.co.uk">alex@noein.co.uk</a></p>
-
-                <div class="row align-items-center">
-                  <div class="col-lg-2">
-                  </div>
-                    <div class="col-lg-4">
-                        <a class="btn accent-btn mr-3 mb-2 text-center" href="https://calendly.com/alexandraa-noein/30min">Book a discovery call</a>
-                    </div>
-                    <div class="col-lg-4">
-                        <a class="btn btn-outline-dark mr-3 mb-2 text-center" href="mailto:alex@noein.co.uk">Send me an email</a>
-                    </div>
-                      <div class="col-lg-2">
-                      </div>
-                </div>
+            <div class="contact-image-wrap">
+              <img
+                src="assets/images/coaching-journey.jpg"
+                alt="A quiet moment of reflection — beginning a coaching journey"
+                class="contact-image"
+              >
             </div>
-        </section>
 
-    </main>
+            <div class="content-card">
+              <h2 class="mb-3">Work with me.</h2>
+              <ul class="list-checks mb-0">
+                <li>Free Discovery Call — 30 minutes, relaxed and no obligation.</li>
+                <li>One-to-one coaching — 60-minute sessions online.</li>
+                <li>Availability focused on evenings and weekends.</li>
+                <li>I work with clients worldwide online.</li>
+              </ul>
+            </div>
+
+          </div>
+        </div>
+
+      </div>
+    </div>
+  </section>
+
+  <!-- BOTTOM: Get in touch -->
+  <section class="section-spacer">
+    <div class="container">
+      <div class="content-card text-center h-100">
+
+        <h2 class="mb-3">Get in touch.</h2>
+        <p class="mb-3">
+          I’d love to hear from you. Whether you’re curious about coaching, have a question,
+          or want to book an introductory call, please reach out.
+        </p>
+        <p class="mb-3">
+          Whether you’re based in London or elsewhere in the world, we can work together online at a pace that suits you.
+        </p>
+        <p class="mb-4">
+          Email: <a href="mailto:alex@noein.co.uk">alex@noein.co.uk</a>
+        </p>
+
+        <div class="row align-items-center justify-content-center">
+          <div class="col-lg-4">
+            <a class="btn accent-btn mr-3 mb-2 text-center" href="https://calendly.com/alexandraa-noein/30min">
+              Book a discovery call
+            </a>
+          </div>
+          <div class="col-lg-4">
+            <a class="btn btn-outline-dark mr-3 mb-2 text-center" href="mailto:alex@noein.co.uk">
+              Send me an email
+            </a>
+          </div>
+        </div>
+
+      </div>
+    </div>
+  </section>
+
+</main>
 
     <footer class="footer-white">
         <div class="navbar-sticky">
