--- a/contact.html
+++ b/contact.html
@@ -72,9 +72,9 @@
 
     <div class="navbar-placeholder"></div>
 
-    <main class="flex-fill">
+   <main class="flex-fill">
 
-  <!-- SECTION 1: Text (left) + Get in touch (right) -->
+  <!-- TOP: Text (left) + Image + Work with me (right) -->
   <section class="section-spacer section-hero-intro">
     <div class="container">
       <div class="row align-items-start col-spacing-30">
@@ -84,40 +84,41 @@
           <h1 class="mb-3">Begin your <i class="blue-font-color">coaching journey</i>.</h1>
 
           <p class="mb-3">
-            I offer one-to-one, 60-minute transformative coaching sessions online — a calm, supportive space
-            to reflect, explore what matters, and move forward with clarity.
+            I offer one-to-one, 60-minute transformative coaching sessions online, creating a calm,
+            supportive and collaborative space for you to reflect and explore what matters most.
+          </p>
+
+          <p class="mb-3">
+            If you’re curious about how coaching could support you, you’re invited to book a free
+            30-minute Discovery Call. It’s a relaxed conversation where we can get to know each other
+            and see whether the approach feels right for you.
           </p>
 
           <p class="mb-0">
-            If you’re curious, you’re invited to book a free 30-minute Discovery Call — a relaxed conversation
-            to see if coaching feels right for you.
+            Together we’ll reconnect with your values, clarify your direction, and help you act with intention.
           </p>
         </div>
 
-        <!-- RIGHT: GET IN TOUCH CARD -->
+        <!-- RIGHT: IMAGE + CARD -->
         <div class="col-lg-5">
-          <div class="content-card h-100">
-            <h2 class="mb-3">Get in touch.</h2>
+          <div class="contact-side-stack">
 
-            <p class="mb-3">
-              Email: <a href="mailto:alex@noein.co.uk">alex@noein.co.uk</a>
-            </p>
+            <div class="contact-image-wrap">
+              <img
+                src="assets/images/coaching-journey.jpg"
+                alt="A quiet moment of reflection — beginning a coaching journey"
+                class="contact-image"
+              >
+            </div>
 
-            <p class="mb-4">
-              Whether you’re in London or elsewhere, we can work together online at a pace that suits you.
-            </p>
-
-            <div class="row align-items-center">
-              <div class="col-12 col-sm-6 mb-2">
-                <a class="btn accent-btn w-100" href="https://calendly.com/alexandraa-noein/30min">
-                  Book a discovery call
-                </a>
-              </div>
-              <div class="col-12 col-sm-6 mb-2">
-                <a class="btn btn-outline-dark w-100" href="mailto:alex@noein.co.uk">
-                  Send me an email
-                </a>
-              </div>
+            <div class="content-card">
+              <h2 class="mb-3">Work with me.</h2>
+              <ul class="list-checks mb-0">
+                <li>Free Discovery Call — 30 minutes, relaxed and no obligation.</li>
+                <li>One-to-one coaching — 60-minute sessions online.</li>
+                <li>Availability focused on evenings and weekends.</li>
+                <li>I work with clients worldwide online.</li>
+              </ul>
             </div>
 
           </div>
@@ -127,46 +128,42 @@
     </div>
   </section>
 
-
-  <!-- SECTION 2: Wide image banner -->
-  <section class="section-spacer pt-0">
+  <!-- BOTTOM: Get in touch -->
+  <section class="section-spacer">
     <div class="container">
-      <div class="contact-banner-wrap">
-        <img
-          src="assets/images/coaching-journey.jpg"
-          alt="A quiet moment of reflection — beginning a coaching journey"
-          class="contact-banner-img"
-        >
-      </div>
-    </div>
-  </section>
+      <div class="content-card text-center h-100">
 
+        <h2 class="mb-3">Get in touch.</h2>
+        <p class="mb-3">
+          I’d love to hear from you. Whether you’re curious about coaching, have a question,
+          or want to book an introductory call, please reach out.
+        </p>
+        <p class="mb-3">
+          Whether you’re based in London or elsewhere in the world, we can work together online at a pace that suits you.
+        </p>
+        <p class="mb-4">
+          Email: <a href="mailto:alex@noein.co.uk">alex@noein.co.uk</a>
+        </p>
 
-  <!-- SECTION 3: Work with me card -->
-  <section class="section-spacer pt-0">
-    <div class="container">
-      <div class="row col-spacing-30">
-        <div class="col-lg-12">
-          <div class="content-card">
-            <h2 class="mb-3">Work with me.</h2>
-
-            <ul class="list-checks mb-3">
-              <li>Free Discovery Call — 30 minutes, relaxed and no obligation.</li>
-              <li>One-to-one coaching — 60-minute sessions online.</li>
-              <li>Availability focused on evenings and weekends.</li>
-              <li>I work with clients worldwide online.</li>
-            </ul>
-
-            <p class="mb-0" style="opacity:0.8;">
-              No pressure — bring your questions, and we’ll simply explore what you need.
-            </p>
+        <div class="row align-items-center justify-content-center">
+          <div class="col-lg-4">
+            <a class="btn accent-btn mr-3 mb-2 text-center" href="https://calendly.com/alexandraa-noein/30min">
+              Book a discovery call
+            </a>
+          </div>
+          <div class="col-lg-4">
+            <a class="btn btn-outline-dark mr-3 mb-2 text-center" href="mailto:alex@noein.co.uk">
+              Send me an email
+            </a>
           </div>
         </div>
+
       </div>
     </div>
   </section>
 
 </main>
+
 
 
     <footer class="footer-white">
