--- a/contact.html
+++ b/contact.html
@@ -74,7 +74,7 @@
 
    <main class="flex-fill">
 
-  <!-- TOP: Text (left) + Image + Work with me (right) -->
+  <!-- SECTION 1: Top row (Text + Get in touch card) -->
   <section class="section-spacer section-hero-intro">
     <div class="container">
       <div class="row align-items-start col-spacing-30">
@@ -99,26 +99,30 @@
           </p>
         </div>
 
-        <!-- RIGHT: IMAGE + CARD -->
+        <!-- RIGHT: GET IN TOUCH CARD -->
         <div class="col-lg-5">
-          <div class="contact-side-stack">
+          <div class="content-card h-100">
+            <h2 class="mb-3">Get in touch.</h2>
 
-            <div class="contact-image-wrap">
-              <img
-                src="assets/images/coaching-journey.jpg"
-                alt="A quiet moment of reflection — beginning a coaching journey"
-                class="contact-image"
-              >
-            </div>
+            <p class="mb-3">
+              Email: <a href="mailto:alex@noein.co.uk">alex@noein.co.uk</a>
+            </p>
 
-            <div class="content-card">
-              <h2 class="mb-3">Work with me.</h2>
-              <ul class="list-checks mb-0">
-                <li>Free Discovery Call — 30 minutes, relaxed and no obligation.</li>
-                <li>One-to-one coaching — 60-minute sessions online.</li>
-                <li>Availability focused on evenings and weekends.</li>
-                <li>I work with clients worldwide online.</li>
-              </ul>
+            <p class="mb-4">
+              Whether you’re based in London or elsewhere in the world, we can work together online at a pace that suits you.
+            </p>
+
+            <div class="row align-items-center">
+              <div class="col-12 col-sm-6 mb-2">
+                <a class="btn accent-btn w-100" href="https://calendly.com/alexandraa-noein/30min">
+                  Book a discovery call
+                </a>
+              </div>
+              <div class="col-12 col-sm-6 mb-2">
+                <a class="btn btn-outline-dark w-100" href="mailto:alex@noein.co.uk">
+                  Send me an email
+                </a>
+              </div>
             </div>
 
           </div>
@@ -128,33 +132,38 @@
     </div>
   </section>
 
-  <!-- BOTTOM: Get in touch -->
-  <section class="section-spacer">
+
+  <!-- SECTION 2: Bottom row (Long image + Work with me card) -->
+  <section class="section-spacer pt-0">
     <div class="container">
-      <div class="content-card text-center h-100">
+      <div class="row align-items-stretch col-spacing-30">
 
-        <h2 class="mb-3">Get in touch.</h2>
-        <p class="mb-3">
-          I’d love to hear from you. Whether you’re curious about coaching, have a question,
-          or want to book an introductory call, please reach out.
-        </p>
-        <p class="mb-3">
-          Whether you’re based in London or elsewhere in the world, we can work together online at a pace that suits you.
-        </p>
-        <p class="mb-4">
-          Email: <a href="mailto:alex@noein.co.uk">alex@noein.co.uk</a>
-        </p>
-
-        <div class="row align-items-center justify-content-center">
-          <div class="col-lg-4">
-            <a class="btn accent-btn mr-3 mb-2 text-center" href="https://calendly.com/alexandraa-noein/30min">
-              Book a discovery call
-            </a>
+        <!-- LEFT: WIDE IMAGE -->
+        <div class="col-lg-7 mb-4 mb-lg-0">
+          <div class="contact-banner-wrap h-100">
+            <img
+              src="assets/images/coaching-journey.jpg"
+              alt="A quiet moment of reflection — beginning a coaching journey"
+              class="contact-banner-img"
+            >
           </div>
-          <div class="col-lg-4">
-            <a class="btn btn-outline-dark mr-3 mb-2 text-center" href="mailto:alex@noein.co.uk">
-              Send me an email
-            </a>
+        </div>
+
+        <!-- RIGHT: WORK WITH ME -->
+        <div class="col-lg-5">
+          <div class="content-card h-100">
+            <h2 class="mb-3">Work with me.</h2>
+
+            <ul class="list-checks mb-3">
+              <li>Free Discovery Call — 30 minutes, relaxed and no obligation.</li>
+              <li>One-to-one coaching — 60-minute sessions online.</li>
+              <li>Availability focused on evenings and weekends.</li>
+              <li>I work with clients worldwide online.</li>
+            </ul>
+
+            <p class="mb-0" style="opacity:0.8;">
+              No pressure — bring your questions, and we’ll simply explore what you need.
+            </p>
           </div>
         </div>
 
@@ -163,7 +172,6 @@
   </section>
 
 </main>
-
 
 
     <footer class="footer-white">
