--- a/contact.html
+++ b/contact.html
@@ -136,7 +136,7 @@
   <!-- SECTION 2: Bottom row (Long image + Work with me card) -->
   <section class="section-spacer pt-0">
     <div class="container">
-      <div class="row align-items-stretch col-spacing-30">
+      <div class="row col-spacing-30 contact-bottom-row">
 
         <!-- LEFT: WIDE IMAGE -->
         <div class="col-lg-7 mb-4 mb-lg-0">
