--- a/contact.html
+++ b/contact.html
@@ -134,42 +134,43 @@
 
 
   <!-- SECTION 2: Bottom row (Long image + Work with me card) -->
-  <section class="section-spacer pt-0">
-    <div class="container">
-      <div class="row col-spacing-30 contact-bottom-row">
+  <section class="section-spacer contact-bottom-section">
+  <div class="container">
+    <div class="contact-bottom-wrap">
+      <div class="row col-spacing-30 align-items-stretch">
 
-        <!-- LEFT: WIDE IMAGE -->
-        <div class="col-lg-7 mb-4 mb-lg-0">
-          <div class="contact-banner-wrap h-100">
+        <!-- LEFT: IMAGE (card style) -->
+        <div class="col-lg-6 d-flex">
+          <div class="contact-banner-wrap">
             <img
               src="assets/images/coaching-journey.jpg"
-              alt="A quiet moment of reflection — beginning a coaching journey"
+              alt="Coaching journey"
               class="contact-banner-img"
             >
           </div>
         </div>
 
         <!-- RIGHT: WORK WITH ME -->
-        <div class="col-lg-5">
-          <div class="content-card h-100">
+        <div class="col-lg-6 d-flex">
+          <div class="content-card h-100 w-100">
             <h2 class="mb-3">Work with me.</h2>
-
-            <ul class="list-checks mb-3">
+            <ul class="list-checks mb-0">
               <li>Free Discovery Call — 30 minutes, relaxed and no obligation.</li>
               <li>One-to-one coaching — 60-minute sessions online.</li>
               <li>Availability focused on evenings and weekends.</li>
               <li>I work with clients worldwide online.</li>
             </ul>
-
-            <p class="mb-0" style="opacity:0.8;">
-              No pressure — bring your questions, and we’ll simply explore what you need.
+            <p class="contact-reassurance mt-3 mb-0">
+              No pressure — you’re welcome to ask anything.
             </p>
           </div>
         </div>
 
       </div>
     </div>
-  </section>
+  </div>
+</section>
+
 
 </main>
 
