--- a/contact.html
+++ b/contact.html
@@ -101,7 +101,7 @@
 
         <!-- RIGHT: GET IN TOUCH CARD -->
         <div class="col-lg-5">
-          <div class="content-card h-100">
+          <div class="content-card text-center h-100 contact-get-in-touch">
             <h2 class="mb-3">Get in touch.</h2>
 
             <p class="mb-3">
