--- a/contact.html
+++ b/contact.html
@@ -134,40 +134,39 @@
 
 
   <!-- SECTION 2: Bottom row (Long image + Work with me card) -->
-  <section class="section-spacer contact-bottom-section">
-  <div class="container">
-    <div class="contact-bottom-wrap">
-      <div class="row col-spacing-30 align-items-stretch">
+<section class="section-spacer contact-bottom-section">
+  <div class="container contact-bottom-wrap">
 
-        <!-- LEFT: IMAGE (card style) -->
-        <div class="col-lg-6 d-flex">
-          <div class="contact-banner-wrap">
-            <img
-              src="assets/images/coaching-journey.jpg"
-              alt="Coaching journey"
-              class="contact-banner-img"
-            >
-          </div>
+    <div class="row contact-bottom-row col-spacing-30">
+
+      <!-- IMAGE (3/4 width) -->
+      <div class="col-lg-9">
+        <div class="contact-banner-wrap">
+          <img
+            src="assets/images/coaching-journey.jpg"
+            alt="Beginning a coaching journey"
+            class="contact-banner-img"
+          >
         </div>
-
-        <!-- RIGHT: WORK WITH ME -->
-        <div class="col-lg-6 d-flex">
-          <div class="content-card h-100 w-100">
-            <h2 class="mb-3">Work with me.</h2>
-            <ul class="list-checks mb-0">
-              <li>Free Discovery Call — 30 minutes, relaxed and no obligation.</li>
-              <li>One-to-one coaching — 60-minute sessions online.</li>
-              <li>Availability focused on evenings and weekends.</li>
-              <li>I work with clients worldwide online.</li>
-            </ul>
-            <p class="contact-reassurance mt-3 mb-0">
-              No pressure — you’re welcome to ask anything.
-            </p>
-          </div>
-        </div>
-
       </div>
+
+      <!-- WORK WITH ME (1/4 width) -->
+      <div class="col-lg-3">
+        <div class="content-card">
+          <h2 class="mb-3">Work with me.</h2>
+          <ul class="list-checks mb-2">
+            <li>Free 30-minute discovery call</li>
+            <li>60-minute online coaching sessions</li>
+            <li>Evenings & weekends available</li>
+          </ul>
+          <p class="contact-reassurance mb-0">
+            No pressure — ask anything.
+          </p>
+        </div>
+      </div>
+
     </div>
+
   </div>
 </section>
 
