--- a/about.html
+++ b/about.html
@@ -95,15 +95,17 @@
         <h1 class="mb-3">I'm <i class="blue-font-color">Alexandra</i>.</h1>
         <h2 class="mb-3">A Transformative Coach, Architect, and the founder of noein.</h2>
 
-        <p class="mb-3">My journey into coaching began while expanding my own career in architecture. As I grew in that world, I realised the skills that stood out for me were the human ones: listening, guiding, and helping others make sense of their thoughts.</p>
+        <p class="mb-3">My interest in coaching began while trying to find my place in architecture. For a long time, I felt pressure to grow in my chosen field in a way that felt strictly technical and predefined. As I advanced in that world, I realised the skills I gravitated towards were the human ones: listening, guiding and helping others make sense of their thoughts.</p>
 
-        <p class="mb-3">For a long time, I felt pressure to find my place in architecture in a way that felt clearly defined and technical. It was only when I accepted that my interests might take a different form — and that they were still valid, still mine, and could be used meaningfully — that something shifted. With that acceptance came a sense of lightness and confidence, and a release from the stress of trying to force myself into a specialty that didn’t truly reflect who I am.</p>
+        <p class="mb-3">It was only when I accepted that my interests might take a different form and that they were still valid, still mine and could be used meaningfully, that something shifted. With that acceptance came a sense of lightness and confidence, and a release from the stress of trying to force myself into a specialty that didn’t truly reflect who I am.</p>
 
-        <p class="mb-3">I began to see that what I had to offer the practice I worked in was exactly this perspective. I introduced a focus on personal development, helping to cultivate a growth culture through mentoring and coaching within the office.</p>
+        <p class="mb-3">Over the years, I had channelled my passion for personal and professional development in different mentoring programmes, both as a student and a professional. Through experience, my inclination to support others, became a natural path forward. As I trained as a Transformative Coach with the Animas Centre for Coaching, I realised that I didn’t have to choose between these two sides of myself, I could bring them together meaningfully.</p>
 
-        <p class="mb-3">Over time, this understanding became more than an interest; it became a natural path forward. I trained as a Transformative Coach with the Animas Centre for Coaching, realising that I didn’t have to choose between these two sides of myself — I could bring them together.</p>
+        <p class="mb-3">I soon began to see that what I had to offer my workplace was exactly this perspective. I introduced a focus on personal development within the architectural practice, actively encouraging to cultivate a growth culture through mentoring and coaching at the office.</p>
 
-        <p class="mb-3">Noein is the space I once needed myself: a calm place to explore, reflect, and reconnect with what feels true to myself.</p>
+        <p class="mb-3">However, my aspirations as a coach went beyond that. I founded noein as a natural extension of my architectural mindset: applying my soft skills to support people in finding clarity, confidence and alignment between who they are and what they do</p>
+          
+        <p class="mb-3">noein is the space I once needed myself: a safe place to explore, reflect and reconnect with what feels true to me.</p>
 
         <br>
         <h3>A space to think. A space to understand. A space to become.</h3>
