--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@
 
      
       <!-- THREE "SPACE TO" CARDS -->
-      <section class="section-spacer space-cards-section">
+      <div class="row space-cards-section equal-height-row">
         <div class="container">
           <div class="row col-spacing-30 align-items-start">
 
