--- a/about.html
+++ b/about.html
@@ -86,14 +86,14 @@
     <div class="navbar-placeholder"></div>
 
     <main class="flex-fill">
-        <section class="section-spacer">
+       <section class="section-spacer">
   <div class="container">
-    <div class="row align-items-stretch col-spacing-30">
+    <div class="row col-spacing-30 align-items-start">
 
       <!-- LEFT: TEXT -->
-      <div class="col-lg-7 mb-4 mb-lg-0">
-        <h1 class="mb-3">I'm <i class="blue-font-color">Alexandra</i>.</h1>
-        <h2 class="mb-3">A Transformative Coach, Architect, and the founder of noein.</h2>
+      <div class="col-lg-7">
+        <div class="content-card h-100">
+          <h1 class="mb-3">I’m <i class="blue-font-color">Alexandra</i>.</h1>
 
         <p class="mb-3">My interest in coaching began while trying to find my place in architecture. For a long time, I felt pressure to grow in my chosen field in a way that felt strictly technical and predefined. As I advanced in that world, I realised the skills I gravitated towards were the human ones: listening, guiding and helping others make sense of their thoughts.</p>
 
@@ -105,74 +105,92 @@
 
         <p class="mb-3">However, my aspirations as a coach went beyond that. I founded noein as a natural extension of my architectural mindset: applying my soft skills to support people in finding clarity, confidence and alignment between who they are and what they do</p>
           
-        <p class="mb-3">noein is the space I once needed myself: a safe place to explore, reflect and reconnect with what feels true to me.</p>
-
-        <br>
-        <h3>A space to think. A space to understand. A space to become.</h3>
-        <br><br>
+        <p class="mb-0">
+            noein is the space I once needed myself: a safe place to explore, reflect and reconnect
+            with what feels true to me.
+          </p>
+        </div>
       </div>
 
-      <!-- RIGHT: IMAGES + CAPTION (BOTTOM-ALIGNED) -->
-      <div class="col-lg-5 mb-4 mb-lg-0 text-center about-images-col">
+      <!-- RIGHT: STACK -->
+      <div class="col-lg-5">
+        <div class="about-right-stack">
 
-        <div class="about-image-stack">
-          <img
-            src="assets/images/Alex.jpeg"
-            alt="Portrait of Alexandra"
-            class="about-image about-portrait"
-          >
+          <!-- 1) HEADSHOT IN A CIRCLE -->
+          <div class="about-headshot-wrap text-center">
+            <img
+              src="assets/images/about-portrait.jpg"
+              alt="Alexandra portrait"
+              class="about-headshot-circle"
+            >
+          </div>
 
-          <img
-            src="assets/images/workplace.jpg"
-            alt="Alexandra introducing coaching in the workplace"
-            class="about-image about-work"
-          >
+          <!-- 2) PHILOSOPHY CARD UNDER HEADSHOT -->
+          <div class="content-card">
+            <h2 class="mb-3">My philosophy.</h2>
+
+            <p class="mb-3">
+              Life is often influenced by factors we don’t fully notice. In our busy, demanding lives,
+              it’s easy to lose sight of what truly matters...
+            </p>
+
+            <p class="mb-0">
+              Through this work, I offer calm, reflective transformative coaching online, supporting
+              people who want greater clarity, confidence and alignment.
+            </p>
+          </div>
+
+          <!-- 3) BIG COMBINED CARD: QUALIFICATIONS + WORK IMAGE + CAPTION -->
+          <div class="about-combined-card">
+            <div class="row col-spacing-30 align-items-stretch">
+
+              <!-- QUALIFICATIONS -->
+              <div class="col-lg-6">
+                <div class="about-combined-inner">
+                  <h2 class="mb-3">My qualifications.</h2>
+
+                  <ul class="list-checks mb-4">
+                    <li>Accredited Diploma in Transformative Coaching</li>
+                    <li>Working towards ICF accreditation</li>
+                    <li>BA (Hons) Degree in Architecture (Part 1)</li>
+                    <li>Pg Diploma in Architecture (Part 2)</li>
+                    <li>RIBA Professional Practice Qualification (Part 3)</li>
+                  </ul>
+
+                  <img
+                    src="assets/images/coach-badge.png"
+                    alt="Accredited Transformative Coach badge"
+                    class="about-badge"
+                  >
+                </div>
+              </div>
+
+              <!-- WORK IMAGE + CAPTION -->
+              <div class="col-lg-6">
+                <div class="about-combined-inner">
+                  <div class="about-workimg-wrap">
+                    <img
+                      src="assets/images/about-work.jpg"
+                      alt="Introducing coaching in my workplace"
+                      class="about-workimg"
+                    >
+                  </div>
+
+                  <p class="about-work-caption mb-0">
+                    Introducing coaching in my workplace — nurturing a culture where people can learn and grow.
+                  </p>
+                </div>
+              </div>
+
+            </div>
+          </div>
+
         </div>
-
-        <p class="about-caption">
-          Introducing coaching in my workplace — nurturing a culture where people can learn and grow.
-        </p>
-
       </div>
 
     </div>
   </div>
 </section>
-
-
-        <section class="section-spacer">
-            <div class="container">
-                <div class="row col-spacing-30 align-items-stretch equal-height-row">
-
-                    <div class="col-lg-6">
-                        <div class="content-card h-100">
-                            <h2 class="mb-3">My philosophy.</h2>
-                            <p class="mb-3">Life is often influenced by factors we don’t fully notice. In our busy, demanding, and sometimes stressful lives, it’s easy to lose sight of what truly matters and to find ourselves living in ways that don’t fully reflect our dreams or values.</p>
-                            <p class="mb-3">Coaching helps us pause, notice the choices we’ve made, and understand the reasons behind them. It supports us to reconnect with our values and remember where we want our choices to take us, so we can live with greater intention, clarity, and alignment.</p>
-                            <p class="mb-0">Through this work, I offer calm, reflective transformative coaching online, supporting people who want greater clarity, confidence and alignment in their life or work.</p>
-                        </div>
-                    </div>
-
-                                <div class="col-lg-6">
-                                    <div class="content-card h-100">
-                                        <h2 class="mb-3">My qualifications.</h2>
-                                        <ul class="list-checks mb-0">
-                                            <li>Accredited Diploma in Transformative Coaching</li>
-                                            <li>Working towards ICF accreditation</li>
-                                            <li>BA (Hons) Degree in Architecture (Part 1)</li>
-                                            <li>Pg Diploma in Architecture (Part 2)</li>
-                                            <li>RIBA Professional Practice Qualification (Part 3)</li>
-                                        </ul>
-                                      </br>
-                                        <div class="card headshot-card text-center">
-                                            <img src="assets/images/animas@2x.png" alt="Accreditation of Animas Coaching School" class="img-fluid rounded" style="padding-top: 10%; max-width: 40%; padding-bottom: 5%;">
-                                        </div>
-                                    </div>
-                                </div>
-
-                </div>
-            </div>
-        </section>
 
         <section class="section-spacer">
             <div class="container">
