--- a/about.html
+++ b/about.html
@@ -119,7 +119,7 @@
           <!-- 1) HEADSHOT IN A CIRCLE -->
           <div class="about-headshot-wrap text-center">
             <img
-              src="assets/images/about-portrait.jpg"
+              src="assets/images/Alex.jpeg"
               alt="Alexandra portrait"
               class="about-headshot-circle"
             >
@@ -158,7 +158,7 @@
                   </ul>
 
                   <img
-                    src="assets/images/coach-badge.png"
+                    src="assets/images/animas@2x.png"
                     alt="Accredited Transformative Coach badge"
                     class="about-badge"
                   >
@@ -170,7 +170,7 @@
                 <div class="about-combined-inner">
                   <div class="about-workimg-wrap">
                     <img
-                      src="assets/images/about-work.jpg"
+                      src="assets/images/workplace.jpg"
                       alt="Introducing coaching in my workplace"
                       class="about-workimg"
                     >
