--- a/about.html
+++ b/about.html
@@ -130,14 +130,15 @@
             <h2 class="mb-3">My philosophy.</h2>
 
             <p class="mb-3">
-              Life is often influenced by factors we don’t fully notice. In our busy, demanding lives,
-              it’s easy to lose sight of what truly matters...
+              Life is often influenced by factors we don't fully notice. In our busy, demanding, and sometimes stressful lives, it's easy to lose sight of what truly matters and to find ourselves living in ways that don't fully reflect our dreams or values.
             </p>
 
             <p class="mb-0">
-              Through this work, I offer calm, reflective transformative coaching online, supporting
-              people who want greater clarity, confidence and alignment.
+              Coaching helps us pause, notice the choices we've made, and understand the reasons behind them. It supports us to reconnect with our values and remember where we want our choices to take us, so we can live with greater intention, clarity, and alignment.
             </p>
+
+             <p class="mb-0">
+              Through this work, I offer calm, reflective transformative coaching online, supporting people who want greater larity, confidence and alignment in their life or work.            </p>
           </div>
 
           <!-- 3) BIG COMBINED CARD: QUALIFICATIONS + WORK IMAGE + CAPTION -->
