--- a/about.html
+++ b/about.html
@@ -91,8 +91,7 @@
     <div class="row col-spacing-30 align-items-start">
 
       <!-- LEFT: TEXT -->
-      <div class="col-lg-7">
-        <div class="content-card h-100">
+      <div class="col-lg-7 mb-4 mb-lg-0">
           <h1 class="mb-3">I’m <i class="blue-font-color">Alexandra</i>.</h1>
 
         <p class="mb-3">My interest in coaching began while trying to find my place in architecture. For a long time, I felt pressure to grow in my chosen field in a way that felt strictly technical and predefined. As I advanced in that world, I realised the skills I gravitated towards were the human ones: listening, guiding and helping others make sense of their thoughts.</p>
