--- a/about.html
+++ b/about.html
@@ -90,9 +90,18 @@
   <div class="container">
     <div class="row col-spacing-30 align-items-start">
 
-      <!-- LEFT: TEXT -->
-      <div class="col-lg-7 mb-4 mb-lg-0">
-          <h1 class="mb-3">I’m <i class="blue-font-color">Alexandra</i>.</h1>
+      <section class="section-spacer">
+  <div class="container">
+    <div class="row col-spacing-30 align-items-start">
+
+      <!-- LEFT: INTRO TEXT (NO CARD) -->
+      <div class="col-lg-7">
+
+        <h1 class="mb-3">I’m <i class="blue-font-color">Alexandra</i>.</h1>
+
+        <h4 class="mb-3">
+          A Transformative Coach, Architect, and the founder of noein.
+        </h4>
 
         <p class="mb-3">My interest in coaching began while trying to find my place in architecture. For a long time, I felt pressure to grow in my chosen field in a way that felt strictly technical and predefined. As I advanced in that world, I realised the skills I gravitated towards were the human ones: listening, guiding and helping others make sense of their thoughts.</p>
 
@@ -111,9 +120,16 @@
         </div>
       </div>
 
-      <!-- RIGHT: STACK -->
+      <!-- RIGHT: IMAGE / CARDS GO HERE -->
       <div class="col-lg-5">
-        <div class="about-right-stack">
+
+        <!-- Your image circle / cards will live here -->
+        
+      </div>
+
+    </div>
+  </div>
+</section>
 
           <!-- 1) HEADSHOT IN A CIRCLE -->
           <div class="about-headshot-wrap text-center">
