--- a/about.html
+++ b/about.html
@@ -123,28 +123,19 @@
       <!-- RIGHT: IMAGE / CARDS GO HERE -->
       <div class="col-lg-5">
 
-        <!-- Your image circle / cards will live here -->
-        
-      </div>
-
-    </div>
+  <!-- Circle portrait -->
+  <div class="about-portrait-wrap text-center mb-4">
+    <img
+              src="assets/images/alexandra-portrait.jpg"
+      alt="Alexandra portrait"
+      class="about-portrait-circle"
+    >
   </div>
-</section>
 
-          <!-- 1) HEADSHOT IN A CIRCLE -->
-          <div class="about-headshot-wrap text-center">
-            <img
-              src="assets/images/Alex.jpeg"
-              alt="Alexandra portrait"
-              class="about-headshot-circle"
-            >
-          </div>
-
-          <!-- 2) PHILOSOPHY CARD UNDER HEADSHOT -->
-          <div class="content-card">
-            <h2 class="mb-3">My philosophy.</h2>
-
-            <p class="mb-3">
+  <!-- Philosophy card -->
+  <div class="content-card">
+    <h3 class="mb-3">My philosophy.</h3>
+    <p class="mb-0">
               Life is often influenced by factors we don't fully notice. In our busy, demanding, and sometimes stressful lives, it's easy to lose sight of what truly matters and to find ourselves living in ways that don't fully reflect our dreams or values.
             </p>
 
@@ -153,19 +144,25 @@
             </p>
 
              <p class="mb-0">
-              Through this work, I offer calm, reflective transformative coaching online, supporting people who want greater larity, confidence and alignment in their life or work.            </p>
-          </div>
+              Through this work, I offer calm, reflective transformative coaching online, supporting people who want greater larity, confidence and alignment in their life or work.</p>
+  </div>
+
+</div>
 
           <!-- 3) BIG COMBINED CARD: QUALIFICATIONS + WORK IMAGE + CAPTION -->
           <div class="about-combined-card">
             <div class="row col-spacing-30 align-items-stretch">
 
-              <!-- QUALIFICATIONS -->
-              <div class="col-lg-6">
-                <div class="about-combined-inner">
-                  <h2 class="mb-3">My qualifications.</h2>
+              <section class="section-spacer">
+  <div class="container">
+    <div class="content-card about-combined-card">
 
-                  <ul class="list-checks mb-4">
+      <div class="row align-items-center col-spacing-30">
+
+        <!-- Qualifications -->
+        <div class="col-lg-6">
+          <h3 class="mb-3">Qualifications & background.</h3>
+          <ul class="list-checks mb-0">
                     <li>Accredited Diploma in Transformative Coaching</li>
                     <li>Working towards ICF accreditation</li>
                     <li>BA (Hons) Degree in Architecture (Part 1)</li>
@@ -181,10 +178,8 @@
                 </div>
               </div>
 
-              <!-- WORK IMAGE + CAPTION -->
-              <div class="col-lg-6">
-                <div class="about-combined-inner">
-                  <div class="about-workimg-wrap">
+              <!-- Workplace image + caption -->
+        <div class="col-lg-6">
                     <img
                       src="assets/images/workplace.jpg"
                       alt="Introducing coaching in my workplace"
@@ -194,14 +189,9 @@
 
                   <p class="about-work-caption mb-0">
                     Introducing coaching in my workplace — nurturing a culture where people can learn and grow.
-                  </p>
-                </div>
-              </div>
-
-            </div>
-          </div>
-
+                 </p>
         </div>
+
       </div>
 
     </div>
