--- a/about.html
+++ b/about.html
@@ -126,7 +126,7 @@
   <!-- Circle portrait -->
   <div class="about-portrait-wrap text-center mb-4">
     <img
-              src="assets/images/alexandra-portrait.jpg"
+              src="assets/images/Alex.jpeg"
       alt="Alexandra portrait"
       class="about-portrait-circle"
     >
