--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
         <div class="container text-center">
 
             <h1 class="mb-3">noein <i class="blue-font-color">— A Space to Think</i>.</h1>
-            <h2 class="mb-3">Transformative coaching for individuals and professionals seeking clarity, confidence, and alignment with what matters most.</h2>
+            <h2 class="mb-3">Transformative coaching for individuals and professionals seeking clarity, confidence and alignment with what matters most.</h2>
         
         </div>
       </section>
@@ -127,24 +127,24 @@
               <div class="content-card h-100">
 
                 <p class="mb-3">
-                  I’m Alexandra — a Transformative Coach, Architect and founder of Noein. I support people who feel a quiet pull to step away from expectations,
-                  reconnect with themselves, and move forward with clarity and confidence — guided by their values.
+                  Hi, I’m Alexandra, a Transformative Coach, Architect and founder of Noein. I support people who feel a quiet pull to step away from expectations,
+                  reconnect with themselves, and move forward with clarity and confidence, guided by their values.
                 </p>
 
                 <p class="mb-3">
-                  At Noein, you step into a space of personal reflection — a place to slow down, explore your thoughts, and rediscover what feels true for you.
+                  At Noein, you step into a space of personal reflection, where you can slow down, explore your thoughts, and rediscover what feels true for you.
                 </p>
 
                 <p class="mb-3">
-                  It’s a calm space for honest conversation, thoughtful insight, and gentle transformation. Coaching here isn’t about being given answers; it’s about reconnecting with yourself and uncovering what’s already within you.
+                  The coaching process isn’t about being given answers; it’s about reconnecting with yourself and uncovering what’s already within you, through honest conversation and thoughtful insight.
                 </p>
 
                 <p class="mb-4">
-                  Coaching at noein begins with space — space to think freely, to understand what truly matters, and to become more aligned with who you are and how you choose to live.
+                  At noein coaching begins with space to think freely, to understand what truly matters and to become more aligned with who you are and how you choose to live.
                 </p>
 
                 <p class="mt-3 mb-0">
-                  You can read more about Alexandra’s background on the <a href="about.html">About page</a>.
+                  You can read more about me on the <a href="about.html">About page</a>.
                 </p>
 
               </div>
@@ -165,9 +165,9 @@
         <img src="assets/images/space-think.jpg" alt="A space to think" class="space-card-img">
         <div class="content-card">
           <ul class="list-checks mb-0 text-left">
-            <li>Exploration and widening awareness.</li>
+            <li>Exploring and widening awareness.</li>
             <li>Expanding perspective and possibility.</li>
-            <li>Gentle curiosity.</li>
+            <li>Embracing curiosity.</li>
           </ul>
         </div>
       </div>
@@ -178,7 +178,7 @@
         <img src="assets/images/space-understand.jpg" alt="A space to understand" class="space-card-img">
         <div class="content-card">
           <ul class="list-checks mb-0 text-left">
-            <li>Seeing patterns clearly.</li>
+            <li>Identifying patterns.</li>
             <li>Making sense of what you’re experiencing.</li>
             <li>Allowing insight to emerge.</li>
           </ul>
@@ -193,7 +193,7 @@
           <ul class="list-checks mb-0 text-left">
             <li>Integrating insight.</li>
             <li>Returning to what feels true.</li>
-            <li>Action shaped by values and priorities.</li>
+            <li>Choosing a path shaped by values and priorities.</li>
           </ul>
         </div>
       </div>
