--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
                 </p>
 
                 <p class="mb-3">
-                  At Noein, you step into a space of personal reflection, where you can slow down, explore your thoughts, and rediscover what feels true for you.
+                  At noein, you step into a space of personal reflection, where you can slow down, explore your thoughts, and rediscover what feels true for you.
                 </p>
 
                 <p class="mb-3">
