--- a/about.html
+++ b/about.html
@@ -86,22 +86,18 @@
     <div class="navbar-placeholder"></div>
 
     <main class="flex-fill">
-       <section class="section-spacer">
-  <div class="container">
-    <div class="row col-spacing-30 align-items-start">
+       <main class="flex-fill">
 
-      <section class="section-spacer">
-  <div class="container">
-    <div class="row col-spacing-30 align-items-start">
+  <!-- TOP ROW: left text + right portrait/philosophy -->
+  <section class="section-spacer">
+    <div class="container">
+      <div class="row col-spacing-30 align-items-start">
 
-      <!-- LEFT: INTRO TEXT (NO CARD) -->
-      <div class="col-lg-7">
+        <!-- LEFT: INTRO TEXT (NO CARD) -->
+        <div class="col-lg-7">
+          <h1 class="mb-3">I’m <i class="blue-font-color">Alexandra</i>.</h1>
 
-        <h1 class="mb-3">I’m <i class="blue-font-color">Alexandra</i>.</h1>
-
-        <h4 class="mb-3">
-          A Transformative Coach, Architect, and the founder of noein.
-        </h4>
+          <h4 class="mb-3">A Transformative Coach, Architect, and the founder of noein.</h4>
 
         <p class="mb-3">My interest in coaching began while trying to find my place in architecture. For a long time, I felt pressure to grow in my chosen field in a way that felt strictly technical and predefined. As I advanced in that world, I realised the skills I gravitated towards were the human ones: listening, guiding and helping others make sense of their thoughts.</p>
 
@@ -123,103 +119,114 @@
       <!-- RIGHT: IMAGE / CARDS GO HERE -->
       <div class="col-lg-5">
 
-  <!-- Circle portrait -->
-  <div class="about-portrait-wrap text-center mb-4">
-    <img
-              src="assets/images/Alex.jpeg"
-      alt="Alexandra portrait"
-      class="about-portrait-circle"
-    >
-  </div>
+  <!-- RIGHT: portrait + philosophy -->
+        <div class="col-lg-5">
+          <div class="about-right-stack">
 
-  <!-- Philosophy card -->
-  <div class="content-card">
-    <h3 class="mb-3">My philosophy.</h3>
-    <p class="mb-0">
+            <div class="about-portrait-wrap text-center">
+              <img
+                src="assets/images/Alex.jpeg"
+                alt="Alexandra portrait"
+                class="about-portrait-circle"
+              >
+            </div>
+
+            <div class="content-card">
+              <h3 class="mb-3">My philosophy.</h3>
+            <p class="mb-3">
               Life is often influenced by factors we don't fully notice. In our busy, demanding, and sometimes stressful lives, it's easy to lose sight of what truly matters and to find ourselves living in ways that don't fully reflect our dreams or values.
             </p>
 
-            <p class="mb-0">
+            <p class="mb-3">
               Coaching helps us pause, notice the choices we've made, and understand the reasons behind them. It supports us to reconnect with our values and remember where we want our choices to take us, so we can live with greater intention, clarity, and alignment.
             </p>
 
-             <p class="mb-0">
+             <p class="mb-3">
               Through this work, I offer calm, reflective transformative coaching online, supporting people who want greater larity, confidence and alignment in their life or work.</p>
   </div>
 
 </div>
-
-          <!-- 3) BIG COMBINED CARD: QUALIFICATIONS + WORK IMAGE + CAPTION -->
-          <div class="about-combined-card">
-            <div class="row col-spacing-30 align-items-stretch">
-
-              <section class="section-spacer">
-  <div class="container">
-    <div class="content-card about-combined-card">
-
-      <div class="row align-items-center col-spacing-30">
-
-        <!-- Qualifications -->
-        <div class="col-lg-6">
-          <h3 class="mb-3">Qualifications & background.</h3>
-          <ul class="list-checks mb-0">
-                    <li>Accredited Diploma in Transformative Coaching</li>
-                    <li>Working towards ICF accreditation</li>
-                    <li>BA (Hons) Degree in Architecture (Part 1)</li>
-                    <li>Pg Diploma in Architecture (Part 2)</li>
-                    <li>RIBA Professional Practice Qualification (Part 3)</li>
-                  </ul>
-
-                  <img
-                    src="assets/images/animas@2x.png"
-                    alt="Accredited Transformative Coach badge"
-                    class="about-badge"
-                  >
-                </div>
-              </div>
-
-              <!-- Workplace image + caption -->
-        <div class="col-lg-6">
-                    <img
-                      src="assets/images/workplace.jpg"
-                      alt="Introducing coaching in my workplace"
-                      class="about-workimg"
-                    >
-                  </div>
-
-                  <p class="about-work-caption mb-0">
-                    Introducing coaching in my workplace — nurturing a culture where people can learn and grow.
-                 </p>
         </div>
 
       </div>
-
     </div>
-  </div>
-</section>
+  </section>
 
-        <section class="section-spacer">
-            <div class="container">
-                <div class="content-card text-center h-100">
-                  <h2 class="mb-3">Ready to begin?</h2>
-                  <p class="mb-4">If you’re ready for a calm, thoughtful space to reconnect with yourself, I’d love to hear from you.</p>
+          <!-- BIG COMBINED CARD: centered, same feel/width as Ready to begin -->
+  <section class="section-spacer">
+    <div class="container">
+      <div class="content-card about-combined-card">
+        <div class="row col-spacing-30 align-items-center">
 
-                <div class="row align-items-center">
-                  <div class="col-lg-2">
-                  </div>
-                    <div class="col-lg-4">
-                        <a class="btn accent-btn mr-3 mb-2 text-center" href="https://calendly.com/alexandraa-noein/30min">Book a discovery call</a>
-                    </div>
-                    <div class="col-lg-4">
-                        <a class="btn btn-outline-dark mr-3 mb-2 text-center" href="mailto:alex@noein.co.uk">Send me an email</a>
-                    </div>
-                      <div class="col-lg-2">
-                      </div>
-                </div>
-            </div>
-        </section>
+          <!-- Qualifications -->
+          <div class="col-lg-6">
+            <h3 class="mb-3">Qualifications &amp; background.</h3>
+            <ul class="list-checks mb-4">
+              <li>Accredited Diploma in Transformative Coaching</li>
+              <li>Working towards ICF accreditation</li>
+              <li>BA (Hons) Degree in Architecture (Part 1)</li>
+              <li>Pg Diploma in Architecture (Part 2)</li>
+              <li>RIBA Professional Practice Qualification (Part 3)</li>
+            </ul>
 
-    </main>
+            <img
+              src="assets/images/animas@2x.png"
+              alt="Accredited Transformative Coach badge"
+              class="about-badge"
+            >
+          </div>
+
+          <!-- Workplace image + caption -->
+          <div class="col-lg-6">
+            <img
+              src="assets/images/workplace.jpg"
+              alt="Introducing coaching in my workplace"
+              class="about-workimg"
+            >
+            <p class="about-caption mb-0">
+              Introducing coaching in my workplace — nurturing a culture where people can learn and grow.
+            </p>
+          </div>
+
+        </div>
+      </div>
+    </div>
+  </section>
+
+
+  <!-- READY TO BEGIN -->
+  <section class="section-spacer">
+    <div class="container">
+      <div class="content-card text-center h-100">
+        <h2 class="mb-3">Ready to begin?</h2>
+        <p class="mb-4">
+          If you’re ready for a calm, thoughtful space to reconnect with yourself, I’d love to hear from you.
+        </p>
+
+        <div class="row align-items-center">
+          <div class="col-lg-2"></div>
+
+          <div class="col-lg-4">
+            <a class="btn accent-btn mr-3 mb-2 text-center"
+               href="https://calendly.com/alexandraa-noein/30min">
+              Book a discovery call
+            </a>
+          </div>
+
+          <div class="col-lg-4">
+            <a class="btn btn-outline-dark mr-3 mb-2 text-center"
+               href="mailto:alex@noein.co.uk">
+              Send me an email
+            </a>
+          </div>
+
+          <div class="col-lg-2"></div>
+        </div>
+      </div>
+    </div>
+  </section>
+
+</main>
 
     <footer class="footer-white">
         <div class="navbar-sticky">
