--- a/services.html
+++ b/services.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="robots" content="index, follow">
-    <meta name="description" content="Transformative coaching with noein – a space to think, understand yourself and become "You".">
+    <meta name="description" content="Transformative coaching with noein – A space to Think. A space to understand. A space to become.">
     <meta name="keywords" content="transformative coaching, coaching services, clarity, confidence, noein">
     <link rel="canonical" href="https://www.noein.co.uk/services">
     <title>noein | coaching services</title>
@@ -48,9 +48,9 @@
         <h2 class="mb-4">A space to think, understand yourself and become "You"</h2>
         <p class="mb-0">
             Transformative coaching offers you time and space to explore what matters,
-            understand what’s shaping your choices, and remember your true self.<p>
-        <p class="mb-3">Coaching at noein is for individuals and professionals who want to understand themselves more deeply, and make choices that feel aligned rather than imposed.
-It’s a space to reconnect with who you are, honour what matters to you, and move forward with greater clarity and confidence.
+            understand what’s shaping your choices and remember your true self.<p>
+        <p class="mb-3">Coaching at noein is for individuals and professionals who want to understand themselves more deeply and make choices that feel aligned rather than imposed.
+It’s a space to reconnect with who you are, honour what matters to you and move forward with greater clarity and confidence.
         </p>
     </div>
 </section>
@@ -64,7 +64,7 @@ It’s a space to reconnect with who you are, honour what matters to you, and mo
                 <div class="content-card h-100">
                     <h2 class="mb-3">Who I work with.</h2>
                     <p>
-                        At noein, I support individuals and professionals who, like I once did, feel a pull toward something more aligned — a desire to reconnect with themselves, gain direction, and build confidence in the choices ahead.
+                        At noein, I support individuals and professionals who, like me, feel a pull toward something more aligned — a desire to reconnect with themselves, gain direction and build confidence in the choices ahead.
                     </p>
                 </div>
             </div>
@@ -89,7 +89,7 @@ It’s a space to reconnect with who you are, honour what matters to you, and mo
                     <h2 class="mb-3">My coaching style.</h2>
 
         <p class="mb-4">
-            My approach is reflective, calm, and centred around awareness. I meet clients where they are, following their pace, their questions, and what naturally arises in the space we create together.
+            My approach is reflective, calm, and centred around awareness. I meet clients where they are, following their pace, their questions and what naturally arises in the space we create together.
         </p>
 
         <p>
