--- a/about.html
+++ b/about.html
@@ -86,7 +86,6 @@
     <div class="navbar-placeholder"></div>
 
     <main class="flex-fill">
-       <main class="flex-fill">
 
   <!-- TOP ROW: left text + right portrait/philosophy -->
   <section class="section-spacer">
@@ -96,30 +95,21 @@
         <!-- LEFT: INTRO TEXT (NO CARD) -->
         <div class="col-lg-7">
           <h1 class="mb-3">I’m <i class="blue-font-color">Alexandra</i>.</h1>
-
           <h4 class="mb-3">A Transformative Coach, Architect, and the founder of noein.</h4>
 
-        <p class="mb-3">My interest in coaching began while trying to find my place in architecture. For a long time, I felt pressure to grow in my chosen field in a way that felt strictly technical and predefined. As I advanced in that world, I realised the skills I gravitated towards were the human ones: listening, guiding and helping others make sense of their thoughts.</p>
+          <p class="mb-3">My interest in coaching began while trying to find my place in architecture...</p>
+          <p class="mb-3">It was only when I accepted that my interests might take a different form...</p>
+          <p class="mb-3">Over the years, I had channelled my passion for personal and professional development...</p>
+          <p class="mb-3">I soon began to see that what I had to offer my workplace was exactly this perspective...</p>
+          <p class="mb-3">However, my aspirations as a coach went beyond that...</p>
 
-        <p class="mb-3">It was only when I accepted that my interests might take a different form and that they were still valid, still mine and could be used meaningfully, that something shifted. With that acceptance came a sense of lightness and confidence, and a release from the stress of trying to force myself into a specialty that didn’t truly reflect who I am.</p>
-
-        <p class="mb-3">Over the years, I had channelled my passion for personal and professional development in different mentoring programmes, both as a student and a professional. Through experience, my inclination to support others, became a natural path forward. As I trained as a Transformative Coach with the Animas Centre for Coaching, I realised that I didn’t have to choose between these two sides of myself, I could bring them together meaningfully.</p>
-
-        <p class="mb-3">I soon began to see that what I had to offer my workplace was exactly this perspective. I introduced a focus on personal development within the architectural practice, actively encouraging to cultivate a growth culture through mentoring and coaching at the office.</p>
-
-        <p class="mb-3">However, my aspirations as a coach went beyond that. I founded noein as a natural extension of my architectural mindset: applying my soft skills to support people in finding clarity, confidence and alignment between who they are and what they do</p>
-          
-        <p class="mb-0">
+          <p class="mb-0">
             noein is the space I once needed myself: a safe place to explore, reflect and reconnect
             with what feels true to me.
           </p>
         </div>
-      </div>
 
-      <!-- RIGHT: IMAGE / CARDS GO HERE -->
-      <div class="col-lg-5">
-
-  <!-- RIGHT: portrait + philosophy -->
+        <!-- RIGHT: portrait + philosophy -->
         <div class="col-lg-5">
           <div class="about-right-stack">
 
@@ -133,26 +123,28 @@
 
             <div class="content-card">
               <h3 class="mb-3">My philosophy.</h3>
-            <p class="mb-3">
-              Life is often influenced by factors we don't fully notice. In our busy, demanding, and sometimes stressful lives, it's easy to lose sight of what truly matters and to find ourselves living in ways that don't fully reflect our dreams or values.
-            </p>
 
-            <p class="mb-3">
-              Coaching helps us pause, notice the choices we've made, and understand the reasons behind them. It supports us to reconnect with our values and remember where we want our choices to take us, so we can live with greater intention, clarity, and alignment.
-            </p>
+              <p class="mb-3">
+                Life is often influenced by factors we don't fully notice. In our busy, demanding, and sometimes stressful lives, it's easy to lose sight of what truly matters and to find ourselves living in ways that don't fully reflect our dreams or values.
+              </p>
 
-             <p class="mb-3">
-              Through this work, I offer calm, reflective transformative coaching online, supporting people who want greater larity, confidence and alignment in their life or work.</p>
-  </div>
+              <p class="mb-3">
+                Coaching helps us pause, notice the choices we've made, and understand the reasons behind them. It supports us to reconnect with our values and remember where we want our choices to take us, so we can live with greater intention, clarity, and alignment.
+              </p>
 
-</div>
+              <p class="mb-0">
+                Through this work, I offer calm, reflective transformative coaching online, supporting people who want greater larity, confidence and alignment in their life or work.
+              </p>
+            </div>
+
+          </div>
         </div>
 
       </div>
     </div>
   </section>
 
-          <!-- BIG COMBINED CARD: centered, same feel/width as Ready to begin -->
+  <!-- COMBINED CARD: centered underneath both columns -->
   <section class="section-spacer">
     <div class="container">
       <div class="content-card about-combined-card">
@@ -193,7 +185,6 @@
     </div>
   </section>
 
-
   <!-- READY TO BEGIN -->
   <section class="section-spacer">
     <div class="container">
@@ -222,11 +213,13 @@
 
           <div class="col-lg-2"></div>
         </div>
+
       </div>
     </div>
   </section>
 
 </main>
+
 
     <footer class="footer-white">
         <div class="navbar-sticky">
